[package]
name = "just_linked"
version = "0.1.0"
edition = "2021"
authors = ["luyi <luyikk@126.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/JustLinked"
documentation = "https://docs.rs/just_linked/"
description = "fast linked list;give you a different feeling!"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4.8"